--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
+        <!--navigation bar-->
         <nav>
             <ul>
                 <li>
