--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main class="content">
         <section class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg"
-                alt="bird's-eye view of a desk showing coffee, a laptop, an open notebook and other office supplies"
+                alt="desk workspace with notebook open to notes on search engine optimization"
                 class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -93,7 +93,7 @@
     </aside>
 
     <footer>
-        <h2>❤️ Made with love️ by Horiseon</h2>
+        <h3>❤️ Made with love️ by Horiseon</h3>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
