added comments and updated README

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon</title>
+    <title>Horiseon Home</title>
 </head>
 
 <body>
@@ -28,6 +28,7 @@
 
     <div class="hero"></div>
     <main class="content">
+        <!--main page content-->
         <section class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg"
                 alt="desk workspace with notebook open to notes on search engine optimization"
@@ -42,7 +43,7 @@
 
         <section class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg"
-                alt="person sitting at desk looking at laptop with powerpoint about reputation on the screen"
+                alt="person vewing powerpoint about reputation on their laptop"
                 class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -54,7 +55,7 @@
 
         <section class="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg"
-                alt="bird's-eye view of table of people working on their laptops with various social media icon graphics all over the table"
+                alt="people working on laptops with various company logos all over the table"
                 class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -66,6 +67,7 @@
     </main>
 
     <aside>
+        <!--list of benefits (side of page)-->
         <div class="benefits">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
@@ -93,6 +95,7 @@
     </aside>
 
     <footer>
+        <!--footer-->
         <h3>❤️ Made with love️ by Horiseon</h3>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
