added section IDs

--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
         </nav>
     </header>
 
+    <!--hero-->
     <div class="hero"></div>
+    <!--main page content-->
     <main class="content">
-        <!--main page content-->
-        <section class="search-engine-optimization">
+        <section class="search-engine-optimization" id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg"
                 alt="desk workspace with notebook open to notes on search engine optimization"
                 class="float-left" />
@@ -41,7 +42,7 @@
             </p>
         </section>
 
-        <section class="online-reputation-management">
+        <section class="online-reputation-management" id="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg"
                 alt="person vewing powerpoint about reputation on their laptop"
                 class="float-right" />
@@ -53,7 +54,7 @@
             </p>
         </section>
 
-        <section class="social-media-marketing">
+        <section class="social-media-marketing" id="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg"
                 alt="people working on laptops with various company logos all over the table"
                 class="float-left" />
