--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
         </div>
     </aside>
 
-    <footer>
-        <!--footer-->
+    <!--footer-->
+    <footer class="footer">
         <h3>❤️ Made with love️ by Horiseon</h3>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
