added alt attributes to images in benefits section

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <!--list of benefits (side of page)-->
         <div class="benefits">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="small graphic of gear inside of funnel that points down to a dollar sign"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly
                 to your website.
@@ -79,7 +79,7 @@
         </div>
         <div class="benefits">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="small graphic of a lightbulb in place of a person's head on top of the top half of a suit"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility
                 for your business.
@@ -87,7 +87,7 @@
         </div>
         <div class="benefits">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" />
+            <img src="./assets/images/cost-management.png" alt="small graphic of a gear with money in front of it"/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer
                 need to advertise your page.
