--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="hero"></div>
     <!--main page content-->
     <main class="content">
-        <section class="search-engine-optimization" id="search-engine-optimization">
+        <section class="what-we-do" id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg"
                 alt="desk workspace with notebook open to notes on search engine optimization"
                 class="float-left" />
@@ -42,7 +42,7 @@
             </p>
         </section>
 
-        <section class="online-reputation-management" id="online-reputation-management">
+        <section class="what-we-do" id="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg"
                 alt="person vewing powerpoint about reputation on their laptop"
                 class="float-right" />
@@ -54,7 +54,7 @@
             </p>
         </section>
 
-        <section class="social-media-marketing" id="social-media-marketing">
+        <section class="what-we-do" id="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg"
                 alt="people working on laptops with various company logos all over the table"
                 class="float-left" />
